RESOLVED FIXED267406
[WPE] WPE Platform: wrong usage reported in DMABuf buffer formats under wayland
https://bugs.webkit.org/show_bug.cgi?id=267406
Summary [WPE] WPE Platform: wrong usage reported in DMABuf buffer formats under wayland
Carlos Garcia Campos
Reported 2024-01-11 05:44:35 PST
When there's more than one tranche, the flags for the next tranches are added to the previous one. This is because we are using std::move with the Tranche struct without defining a move constructor, so the flags member is not set to 0 after the move.
Attachments
Carlos Garcia Campos
Comment 1 2024-01-11 05:46:46 PST
EWS
Comment 2 2024-01-11 06:15:06 PST
Committed 272911@main (75f18bf8d6d7): <https://commits.webkit.org/272911@main> Reviewed commits have been landed. Closing PR #22654 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.